# clawd-relay

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.dev/: blueprint.md  proposal.md
.dev/001-project-skeleton/: init.md  issues.md
.dev/002-python-bridge/: init.md  issues.md
.dev/003-cf-worker/: init.md  issues.md
.dev/004-web-client/: design.md  init.md  responsive.md
.dev/005-hook-scripts/: init.md  issues.md
.dev/006-pairing-flow/: init.md
.dev/007-deployment-verification/: init.md
.dev/008-auto-hook-injection/: init.md
bridge/: pyproject.toml
bridge/src/bridge/: schemas.py
bridge/src/bridge/hooks/: clawd-hook.js  clawd-hook.test.js  install.js  install.test.js  server-config.js
bridge/src/clawd_relay_bridge/: main.py  qr_output.py  schemas.py  server.py  token.py  ws_client.py
bridge/src/clawd_relay_bridge/hooks/: clawd-hook.js  clawd-hook.test.js  install.js  install.test.js  server-config.test.js
bridge/tests/: test_main.py  test_qr_output.py  test_retry_strategy.py  test_schemas.py  test_server.py  test_token.py  test_ws_client.py
web/: index.html  package.json  tsconfig.json
web/src/: app.tsx  main.tsx  sound.ts  style.css  ws.test.ts  ws.ts
web/src/components/: ConnectionIndicator.tsx  DNDToggle.tsx  Dashboard.tsx  DeviceGroup.tsx  EmptyState.tsx  ErrorBoundary.tsx  (+4 more)
worker/: package.json  tsconfig.json  wrangler.toml
worker/src/: admin-console.ts  durable-object.ts  index.ts  types.ts
worker/tests/: admin-console.test.ts  durable-object.test.ts  routes.test.ts  smoke.test.ts  types.test.ts
(+7 files in other folders)
