[project]
name = "clawd-relay-bridge"
version = "0.1.0"
description = "Clawd Relay — local bridge process"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=12",
    "pydantic>=2.0",
]

[project.scripts]
relay = "clawd_relay_bridge.main:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = ["pytest>=8.0"]
